// THIS FILE IS GENERATED BY ftrace_proto_generator.py, PLEASE DON'T EDIT IT!
// Copyright (c) 2021 Huawei Device Co., Ltd.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

// category: mmc
// /sys/kernel/debug/tracing/events/mmc/mmc_request_done/format
message MmcRequestDoneFormat {
    uint32 cmd_opcode = 1;
    int32 cmd_err = 2;
    string cmd_resp = 3;
    uint32 cmd_retries = 4;
    uint32 stop_opcode = 5;
    int32 stop_err = 6;
    string stop_resp = 7;
    uint32 stop_retries = 8;
    uint32 sbc_opcode = 9;
    int32 sbc_err = 10;
    string sbc_resp = 11;
    uint32 sbc_retries = 12;
    uint32 bytes_xfered = 13;
    int32 data_err = 14;
    int32 tag = 15;
    uint32 can_retune = 16;
    uint32 doing_retune = 17;
    uint32 retune_now = 18;
    int32 need_retune = 19;
    int32 hold_retune = 20;
    uint32 retune_period = 21;
    uint64 mrq = 22;
    string name = 23;
}

// /sys/kernel/debug/tracing/events/mmc/mmc_request_start/format
message MmcRequestStartFormat {
    uint32 cmd_opcode = 1;
    uint32 cmd_arg = 2;
    uint32 cmd_flags = 3;
    uint32 cmd_retries = 4;
    uint32 stop_opcode = 5;
    uint32 stop_arg = 6;
    uint32 stop_flags = 7;
    uint32 stop_retries = 8;
    uint32 sbc_opcode = 9;
    uint32 sbc_arg = 10;
    uint32 sbc_flags = 11;
    uint32 sbc_retries = 12;
    uint32 blocks = 13;
    uint32 blk_addr = 14;
    uint32 blksz = 15;
    uint32 data_flags = 16;
    int32 tag = 17;
    uint32 can_retune = 18;
    uint32 doing_retune = 19;
    uint32 retune_now = 20;
    int32 need_retune = 21;
    int32 hold_retune = 22;
    uint32 retune_period = 23;
    uint64 mrq = 24;
    string name = 25;
}

